@startuml School Management System - ER Diagram

' Layout settings
skinparam Linetype ortho
skinparam classAttributeIconSize 0
hide circle

' Style settings
skinparam class {
    color black
    BackgroundColor white
    BorderColor black
    ArrowColor black
}

' Entities (Tables)
entity Subject {
    + id [PK]
    --
    name
    code
    description
}

entity User {
    + id [PK]
    --
    firstName
    lastName
    email
    phone
    address
    schoolId
    lastLogin
    isActive
    username
    password
    fingerprint
}

entity Student {
    + id [PK]
    --
    studentId
    enrollmentDate
}

entity Teacher {
    + id [PK]
    --
    teacherId
    joiningDate
    qualification
}

entity SectionalHead {
    + id [PK]
    --
    sectionId
}

entity Principal {
    + id [PK]
    --
    appointmentDate
}

entity Admin {
    + id [PK]
    --
    adminId
    accessLevel
}

entity Class {
    + id [PK]
    --
    name
    grade
    section
}

entity Assessment {
    + id [PK]
    --
    description
    dueDate
    totalMarks
    subjectId [FK]
    assignedTo [FK]
}

entity Exam {
    + id [PK]
    --
    year
    term
    date
    duration
    averageMarks
}

entity ExamResult {
    + id [PK]
    --
    marks
    grade
    remarks
    date
    examId [FK]
    studentId [FK]
}

entity TimeTable {
    + id [PK]
    --
    validFrom
    validTo
}

entity Session {
    + id [PK]
    --
    startTime
    endTime
    day
    timetableId [FK]
    subjectId [FK]
}

entity Attendance {
    + id [PK]
    --
    date
    status
    sessionId [FK]
    remarks
    studentId [FK]
}

' Relationships
User ||--o{ Student : "is a"
User ||--o{ Teacher : "is a"
User ||--o{ Principal : "is a"
User ||--o{ Admin : "is a"
Teacher ||--o{ SectionalHead : "is a"
SectionalHead ||--o{ Principal : "is a"
Principal ||--o{ Admin : "is a"

Student ||--o{ Attendance : "has"
Teacher ||--o{ Subject : "teaches"
TimeTable ||--o{ Session : "has"
Exam ||--o{ ExamResult : "has"

Session }o--|| Subject : "has"
Assessment }o--|| Subject : "has"
Exam }o--|| Subject : "has"
Student }o--|| Subject : "studies"
Student }o--|| ExamResult : "has"
Teacher }o--|| Subject : "teaches"
Teacher }o--|| ExamResult : "evaluates"
Teacher }o--|| Attendance : "marks"
Class }o--|| Teacher : "has"
Class }o--|| Student : "has"

Student }o--|| Assessment : "submits"
Student }o--|| Exam : "takes"
Student }o--|| TimeTable : "follows"
Teacher }o--|| Student : "teaches"
Teacher }o--|| TimeTable : "schedules"
Teacher }o--|| Assessment : "creates"
Teacher }o--|| Session : "teaches"
Teacher }o--|| Exam : "conducts"
SectionalHead }o--|| Teacher : "supervises"
SectionalHead }o--|| TimeTable : "manages"
Principal }o--|| SectionalHead : "manages"
Admin }o--|| User : "manages"
Exam }o--|| Class : "assignedTo"
TimeTable }o--|| Class : "assignedTo"

@enduml